fix: works on mobile now

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -18,13 +18,13 @@ a {
 }
 
 .wrapper {
-  width: 600px;
+  max-width: 600px;
   margin: 0 auto;
   text-align: left;
 }
 
 h1 {
-  font-size: 3.5rem;
+  font-size: 44px;
   text-transform: uppercase;
   font-weight: 800;
   border-bottom: 3px solid black;
@@ -37,7 +37,7 @@ small {
 
 h2 {
   text-transform: uppercase;
-  font-size: 3rem;
+  font-size: 37px;
   margin-bottom: 0;
 }
 
